kustomize/nextcloud/mariadb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: mariadb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/component: mariadb
    spec:
      nodeSelector:
        kubernetes.io/hostname: storagenodet3500
      containers:
        - name: mariadb
          image: mariadb:10.11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: nextcloud-mariadb-pvc
